# Lab_9

./: .travis.yml  CMakeLists.txt  CMakeSettings.json  main.cpp
lib/: bayan_lib.cpp  bayan_lib.h  options.cpp  options.h
